--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-    <title>Fizz Buzz Refactor</title>
-  	<script src="http://code.jquery.com/jquery.min.js"></script>
-  	<script src="js/app.js"></script>
-  	<link rel="stylesheet" href="css/styles.css">
-<link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>      
+  <meta charset="UTF-8">
+  <title>Shark Quiz</title>
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="js/app.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
 
-<div class="container">
+  <div class="container">
 
-<div class="intro">
-	<h2>Know your Sharks<h2>
+    <div class="intro">
+      <h2>Know your Sharks<h2>
 	<p>A ten question quiz about sharks</p>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
+<p class="questions"></p>
+<ul>
+	<li id="choices"></li>
+</ul>
+<h3 class="answers"></h3>
+<p class="factoid"></p>
 </div>
 
 </body>
