--- a/index.html
+++ b/index.html
@@ -16,15 +16,101 @@
 
     <div class="intro">
       <h2>Know your Sharks<h2>
-	<p>A ten question quiz about sharks</p>
+	   <p>A ten question quiz about sharks</p>
+    </div>
+
+<!--Question One-->
+
+<div class="content">
+  <h4 class="question-one">Which of these is NOT a species of shark?</h4>
+  <ul class="choices">
+    <li>a. Pygmy ribbontail catshark</li>
+    <li>b. Longnose sawshark</li>
+    <li>c. Prickly dogfish</li>
+    <li>d. Humuhumunukunukuapua'a</li>
+  </ul>
+<h4 class="answer-one">The answer is D. The answer is Humuhumunukunukuapua'a</h4>
+  <p class="factoid-one">There are more than 350 species of shark - Pygmy Ribbontail Catshark, Prickly Dogfish, and Longnose Sawshark are among them. The Humuhumunukunukuapua'a is the odd one out: It's not a shark - it's a tropical triggerfish that gets its name from the pig-like grunting noise it makes.</p>
 </div>
 
-<p class="questions"></p>
-<ul>
-	<li id="choices"></li>
-</ul>
-<h3 class="answers"></h3>
-<p class="factoid"></p>
+<!--Question Two-->
+
+<div class="content">
+  <h4 class="question-two">The world's fastest shark hs been recorded at speeds in excess of 50km/h. What species of shark set this records?</h4>
+  <ul class="choices">
+    <li>a. Great White Shark</li>
+    <li>b. Sicklefin Hound Shark</li>
+    <li>c. Shortfin Mako Shark</li>
+  </ul>
+<h4 class="answer-two">The answer is C. Shortfin Mako Shark</h4>
+  <p class="factoid-two">The Shortfin Mako Shark has been clocked at 56km/h (35mph) and can use this impressive speed to launch itself 6 meters out of the water. In short bursts during feeding, it's believed they can travel even faster.</p>
+</div>
+
+<!--Question Three-->
+
+<div class="content">
+  <h4 class="question-three">In early 2004, a female great white named Niclole made the longest recorded journey by a shark. Where did she travel?</h4>
+  <ul class="choices">
+    <li>a. From Maine to California</li>
+    <li>b. Around the world, from Hawaii</li>
+    <li>c. From South Africa to Australia, and back</li>
+  </ul>
+<h4 class="answer-three">The answer is C. From South Africa to Australia, and back</h4>
+  <p class="factoid-three">Young female Nicole shocked marine biologists when she surfaced in Australia in Feburary 2004 - just three months after being caught and tagged in South Africa. Even more suprisingly, she then turned back and completed the 20,000 km (12,400 mile) round trip by August, setting long distance speed records in the process.</p>
+</div>
+
+<!--Question Four-->
+
+<div class="content">
+  <h4 class="question-four">A Thresher Shark's scythe-like tail can account for up to half of its body length.How has the shark been observed using this tail?</h4>
+  <ul class="choices">
+    <li>a. Filcking the tail over its head to slap shoals of fish</li>
+    <li>b. To communicate: beating out messages on the surface of the water</li>
+    <li>c. As a glowing lure, to attract smaller fish in the dark</li>
+  </ul>
+<h4 class="answer-four">Filcking the tail over its head to slap shoals of fish.</h4>
+  <p class="factoid-four">Thresher shark's have been filmed accelerating towards shoals of sardines before whipping their long tails over their heads. The resulting mousetrap-like tailwhip can reach speeds of up to 80km/h (50mph), stunning or killing sardines caught in its path.</p>
+</div>
+
+<!--Question Five-->
+
+<div class="content">
+  <h4 class="question-five">Sand Tiger Shark embryos hatch inside their mothers body. What do they do after hatching?</h4>
+  <ul class="choices">
+    <li>a. Starting eating their mother</li>
+    <li>b. Eat their brothers and sisters</li>
+    <li>c. Gnaw their way out of the ocean</li>
+    <li>d. Eat fish that the mother has swallowed</li>
+  </ul>
+<h4 class="answer-five">The answer is B. They eat their brothers and sisters</h4>
+  <p class="factoid-five">When Carcharia's taurus embryos hatch, they are just 5cm long. By the time they've grown to 10cm, they have already developed a taste for flseh - chewing on the other developing embryo's additional eggs while still in the uterus.</p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 </body>
