js and html updated, submit and radio buttons deselection

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div id="intro">
       <h2>Know your Sharks<h2>
-       <p>A five question quiz about sharks</p>
+       <p>A ten question quiz about sharks</p>
        <button type="submit" id="start">Start</button>
     </div>
 
@@ -40,7 +40,6 @@
 
     <!--Question Two-->
     <div id="question-2" class="question">
-      <h3>Question 2 of 5</h3>
       <h3 class="question-two">The world's fastest shark hs been recorded at speeds in excess of 50km/h. What species of shark set this records?</h3>
       <ul class="choices">
         <li><input type="radio" id="q2-a" name="q2" value="a"> <label for="q2-a">Great White Shark</label></li>
@@ -59,7 +58,6 @@
 
     <!--Question Three-->
     <div id="question-3" class="question">
-      <h3>Question 3 of 5</h3>
       <h3 class="question-three">In early 2004, a female great white named Niclole made the longest recorded journey by a shark. Where did she travel?</h3>
       <ul class="choices">
         <li><input type="radio" id="q3-a" name="q3" value="a"> <label for="q3-a">From Maine to California</label></li>
@@ -78,7 +76,6 @@
 
     <!--Question Four-->
     <div id="question-4" class="question">
-      <h3>Question 4 of 5</h3>
       <h3 class="question-four">A Thresher Shark's scythe-like tail can account for up to half of its body length.How has the shark been observed using this tail?</h3>
       <ul class="choices">
         <li><input type="radio" id="q4-a" name="q4" value="a"> <label for="q4-a">a. Filcking the tail over its head to slap shoals of fish</label></li>
@@ -97,7 +94,6 @@
 
     <!--Question Five-->
     <div id="question-5" class="question">
-      <h3>Question 5 of 5</h3>
       <h3 class="question-five">Sand Tiger Shark embryos hatch inside their mothers body. What do they do after hatching?</h3>
       <ul class="choices">
         <li><input type="radio" id="q5-a" name="q5" value="a"> <label for="q5-a">Starting eating their mother</label></li>
